# datapak

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_docs.sh
docker/: Coverage.dockerfile
examples/: main.cpp
include/datapak/: archive.hpp  archive_builder.hpp  compression.hpp  datapak.hpp  format.hpp  vfs.hpp  vfstream.hpp
src/: archive.cpp  archive_builder.cpp  compression.cpp  vfs.cpp  vfstream.cpp
test_data/: readme.txt
test_data/assets/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
test_data/configs/: app.json  settings.ini
test_data/images/: test.ppm
tests/: CMakeLists.txt  test_archive.cpp  test_compression.cpp  test_integration.cpp  test_vfs.cpp  test_vfstream.cpp
tools/: datapak_cli.cpp
